updated code with additional columns to pull

--- a/Data_prep.ipynb
+++ b/Data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Read in fles\n",
+    "#Read in files\n",
     "gene_expression_data_df = pd.read_csv(gene_expression_data)\n",
     "patient_data_df = pd.read_csv(patient_data)\n",
     "supplementary_data_df = pd.read_csv(supplementary_data)\n"
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "[5 rows x 64 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -382,7 +382,7 @@
        "4             40.0        0.0        0.0       1.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {
     "scrolled": false
    },
@@ -655,6 +655,7 @@
        "      <th>Sex</th>\n",
        "      <th>Tumor size (cm)</th>\n",
        "      <th>TNM Staging</th>\n",
+       "      <th>Histologic Grade</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -664,6 +665,7 @@
        "      <td>Female</td>\n",
        "      <td>2.0</td>\n",
        "      <td>IIA</td>\n",
+       "      <td>G2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -671,6 +673,7 @@
        "      <td>Male</td>\n",
        "      <td>5.8</td>\n",
        "      <td>IVA</td>\n",
+       "      <td>G2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -678,6 +681,7 @@
        "      <td>Female</td>\n",
        "      <td>10.5</td>\n",
        "      <td>IIIB</td>\n",
+       "      <td>G2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -685,6 +689,7 @@
        "      <td>Male</td>\n",
        "      <td>4.2</td>\n",
        "      <td>IIIB</td>\n",
+       "      <td>G2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -692,34 +697,35 @@
        "      <td>Female</td>\n",
        "      <td>6.5</td>\n",
        "      <td>IVA</td>\n",
+       "      <td>G2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Age at diagnosis     Sex  Tumor size (cm) TNM Staging\n",
-       "0                70  Female              2.0         IIA\n",
-       "1                67    Male              5.8         IVA\n",
-       "2                64  Female             10.5        IIIB\n",
-       "3                52    Male              4.2        IIIB\n",
-       "4                53  Female              6.5         IVA"
+       "   Age at diagnosis     Sex  Tumor size (cm) TNM Staging Histologic Grade\n",
+       "0                70  Female              2.0         IIA               G2\n",
+       "1                67    Male              5.8         IVA               G2\n",
+       "2                64  Female             10.5        IIIB               G2\n",
+       "3                52    Male              4.2        IIIB               G2\n",
+       "4                53  Female              6.5         IVA               G2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Filter supplementary_data_df to age, gender, tumor size, staging\n",
-    "cleaned_supplementary_df = supplementary_data_df[[\"Age at diagnosis\", \"Sex\", \"Tumor size (cm)\", \"TNM Staging\"]]\n",
+    "cleaned_supplementary_df = supplementary_data_df[[\"Age at diagnosis\", \"Sex\", \"Tumor size (cm)\", \"TNM Staging\",\"Histologic Grade\" ]]\n",
     "cleaned_supplementary_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -745,8 +751,9 @@
        "      <th></th>\n",
        "      <th>Age</th>\n",
        "      <th>Gender</th>\n",
-       "      <th>Tumor size (cm)</th>\n",
-       "      <th>TNM Staging</th>\n",
+       "      <th>Tumor_Size</th>\n",
+       "      <th>TNM_Staging</th>\n",
+       "      <th>Histologic_Grade</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -756,6 +763,7 @@
        "      <td>Female</td>\n",
        "      <td>2.0</td>\n",
        "      <td>IIA</td>\n",
+       "      <td>G2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -763,6 +771,7 @@
        "      <td>Male</td>\n",
        "      <td>5.8</td>\n",
        "      <td>IVA</td>\n",
+       "      <td>G2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -770,6 +779,7 @@
        "      <td>Female</td>\n",
        "      <td>10.5</td>\n",
        "      <td>IIIB</td>\n",
+       "      <td>G2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -777,6 +787,7 @@
        "      <td>Male</td>\n",
        "      <td>4.2</td>\n",
        "      <td>IIIB</td>\n",
+       "      <td>G2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -784,35 +795,36 @@
        "      <td>Female</td>\n",
        "      <td>6.5</td>\n",
        "      <td>IVA</td>\n",
+       "      <td>G2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Age  Gender  Tumor size (cm) TNM Staging\n",
-       "0   70  Female              2.0         IIA\n",
-       "1   67    Male              5.8         IVA\n",
-       "2   64  Female             10.5        IIIB\n",
-       "3   52    Male              4.2        IIIB\n",
-       "4   53  Female              6.5         IVA"
+       "   Age  Gender  Tumor_Size TNM_Staging Histologic_Grade\n",
+       "0   70  Female         2.0         IIA               G2\n",
+       "1   67    Male         5.8         IVA               G2\n",
+       "2   64  Female        10.5        IIIB               G2\n",
+       "3   52    Male         4.2        IIIB               G2\n",
+       "4   53  Female         6.5         IVA               G2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Rename columns cleaned_supplementary_df\n",
-    "cleaned_supplementary_df = cleaned_supplementary_df.rename(columns={\"Age at diagnosis\":\"Age\", \"Sex\":\"Gender\"})\n",
+    "cleaned_supplementary_df = cleaned_supplementary_df.rename(columns={\"Age at diagnosis\":\"Age\", \"Sex\":\"Gender\",\"Tumor size (cm)\":\"Tumor_Size\",\"TNM Staging\":\"TNM_Staging\",\"Histologic Grade\":\"Histologic_Grade\"})\n",
     "cleaned_supplementary_df =cleaned_supplementary_df.dropna()\n",
     "cleaned_supplementary_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -822,18 +834,18 @@
        "       'IIIC', 'IIa', 'IIC'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cleaned_supplementary_df[\"TNM Staging\"].unique()"
+    "cleaned_supplementary_df[\"TNM_Staging\"].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -859,9 +871,10 @@
        "      <th></th>\n",
        "      <th>Age</th>\n",
        "      <th>Gender</th>\n",
-       "      <th>Tumor size (cm)</th>\n",
-       "      <th>TNM Staging</th>\n",
-       "      <th>Dukes Stage</th>\n",
+       "      <th>Tumor_Size</th>\n",
+       "      <th>TNM_Staging</th>\n",
+       "      <th>Histologic_Grade</th>\n",
+       "      <th>Dukes_Stage</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -871,6 +884,7 @@
        "      <td>Female</td>\n",
        "      <td>2.0</td>\n",
        "      <td>IIA</td>\n",
+       "      <td>G2</td>\n",
        "      <td>B</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -879,6 +893,7 @@
        "      <td>Male</td>\n",
        "      <td>5.8</td>\n",
        "      <td>IVA</td>\n",
+       "      <td>G2</td>\n",
        "      <td>D</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -887,6 +902,7 @@
        "      <td>Female</td>\n",
        "      <td>10.5</td>\n",
        "      <td>IIIB</td>\n",
+       "      <td>G2</td>\n",
        "      <td>C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -895,6 +911,7 @@
        "      <td>Male</td>\n",
        "      <td>4.2</td>\n",
        "      <td>IIIB</td>\n",
+       "      <td>G2</td>\n",
        "      <td>C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -903,6 +920,7 @@
        "      <td>Female</td>\n",
        "      <td>6.5</td>\n",
        "      <td>IVA</td>\n",
+       "      <td>G2</td>\n",
        "      <td>D</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -910,15 +928,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   Age  Gender  Tumor size (cm) TNM Staging Dukes Stage\n",
-       "0   70  Female              2.0         IIA           B\n",
-       "1   67    Male              5.8         IVA           D\n",
-       "2   64  Female             10.5        IIIB           C\n",
-       "3   52    Male              4.2        IIIB           C\n",
-       "4   53  Female              6.5         IVA           D"
+       "   Age  Gender  Tumor_Size TNM_Staging Histologic_Grade Dukes_Stage\n",
+       "0   70  Female         2.0         IIA               G2           B\n",
+       "1   67    Male         5.8         IVA               G2           D\n",
+       "2   64  Female        10.5        IIIB               G2           C\n",
+       "3   52    Male         4.2        IIIB               G2           C\n",
+       "4   53  Female         6.5         IVA               G2           D"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +945,7 @@
     "# Map TNM Staging to Dukes Staging\n",
     "\n",
     "# Convert values in 'TNM Staging' column to uppercase\n",
-    "cleaned_supplementary_df['TNM Staging'] = cleaned_supplementary_df['TNM Staging'].str.upper()\n",
+    "cleaned_supplementary_df['TNM_Staging'] = cleaned_supplementary_df['TNM_Staging'].str.upper()\n",
     "\n",
     "# Map TNM Staging to Dukes Staging\n",
     "tnm_to_dukes_mapping = {\n",
@@ -943,14 +961,14 @@
     "    'IVB': 'D',\n",
     "    'IVC': 'D',\n",
     "}\n",
-    "dukes_stage_list = [tnm_to_dukes_mapping[tnm] for tnm in cleaned_supplementary_df['TNM Staging']]\n",
-    "cleaned_supplementary_df['Dukes Stage'] = dukes_stage_list\n",
+    "dukes_stage_list = [tnm_to_dukes_mapping[tnm] for tnm in cleaned_supplementary_df['TNM_Staging']]\n",
+    "cleaned_supplementary_df['Dukes_Stage'] = dukes_stage_list\n",
     "cleaned_supplementary_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1051,7 @@
        "4            75.0    Male           C"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1091,7 @@
        "      <th></th>\n",
        "      <th>Age</th>\n",
        "      <th>Gender</th>\n",
-       "      <th>Dukes Stage</th>\n",
+       "      <th>Dukes_Stage</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1112,7 +1130,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    Age  Gender Dukes Stage\n",
+       "    Age  Gender Dukes_Stage\n",
        "0  62.0    Male           A\n",
        "1  77.0    Male           B\n",
        "2  66.0  Female           C\n",
@@ -1120,26 +1138,33 @@
        "4  75.0    Male           C"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Rename columns cleaned_patient_df\n",
-    "cleaned_patient_df = cleaned_patient_df.rename(columns={\"Age (in years)\":\"Age\"})\n",
+    "cleaned_patient_df = cleaned_patient_df.rename(columns={\"Age (in years)\":\"Age\",\"Dukes Stage\":\"Dukes_Stage\"})\n",
     "cleaned_patient_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "#save dataframe to a CSV file\n",
     "cleaned_patient_df.to_csv('cleaned_patient.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
