--- a/Retrieving Data From Database.ipynb
+++ b/Retrieving Data From Database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "1cc3cfa8",
    "metadata": {},
    "outputs": [],
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5a404db7",
+   "execution_count": 9,
+   "id": "b92fd2b3",
    "metadata": {},
    "outputs": [
     {
@@ -23,6 +23,9 @@
      "text": [
       "Empty DataFrame\n",
       "Columns: [Age_at_diagnosis, Gender, DFS_in_months, DFS_event, Adj_Radio, Adj_Chem, Dukes_Stage]\n",
+      "Index: []\n",
+      "Empty DataFrame\n",
+      "Columns: [Age_at_diagnosis, Gender, Ethnicity, Race, Surgery_type, Diagnosed_before_age_50, Histology, Histologic_Grade, Tumor_Size_cm, Nodes_examined, Nodes_positive, Perineural_invasion, Lymphovascular_invasion, TNM_Staging, Dukes_Stage]\n",
       "Index: []\n"
      ]
     }
@@ -35,20 +38,21 @@
     "\n",
     "# Define a SQL query to fetch the data from the database\n",
     "query = \"SELECT * FROM cleaned_patient;\"\n",
-    "#query1 = \"SELECT * FROM cleaned_supplementary;\"\n",
+    "query1 = \"SELECT * FROM cleaned_supplementary;\"\n",
     "\n",
     "# Use Pandas to read the data into a DataFrame\n",
     "df = pd.read_sql(query, engine)\n",
-    "#df = pd.read_sql(query1, engine)\n",
+    "df1 = pd.read_sql(query1, engine)\n",
     "\n",
     "# Now you can use the DataFrame for further analysis or processing\n",
-    "print(df.head())  "
+    "print(df.head())  \n",
+    "print(df1.head())  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f2b63e5",
+   "id": "919fd0b3",
    "metadata": {},
    "outputs": [],
    "source": []
