updated data prep, database file,data retrieval from db file

--- a/Retrieving Data From Database.ipynb
+++ b/Retrieving Data From Database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "1cc3cfa8",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "b92fd2b3",
    "metadata": {},
    "outputs": [
@@ -21,12 +21,120 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty DataFrame\n",
-      "Columns: [Age_at_diagnosis, Gender, DFS_in_months, DFS_event, Adj_Radio, Adj_Chem, Dukes_Stage]\n",
-      "Index: []\n",
-      "Empty DataFrame\n",
-      "Columns: [Age_at_diagnosis, Gender, Ethnicity, Race, Surgery_type, Diagnosed_before_age_50, Histology, Histologic_Grade, Tumor_Size_cm, Nodes_examined, Nodes_positive, Perineural_invasion, Lymphovascular_invasion, TNM_Staging, Dukes_Stage]\n",
-      "Index: []\n"
+      "Cleaned Patient DataFrame\n",
+      "--------------------------------------------\n",
+      "   Age_at_diagnosis  Gender  DFS_in_months  DFS_event  Adj_Radio  Adj_Chem  \\\n",
+      "0                62    Male            108        0.0        1.0       0.0   \n",
+      "1                77    Male             40        1.0        1.0       0.0   \n",
+      "2                66  Female             49        0.0        1.0       0.0   \n",
+      "3                72  Female             45        0.0        1.0       1.0   \n",
+      "4                75    Male             40        0.0        0.0       1.0   \n",
+      "5                61    Male             65        0.0        1.0       1.0   \n",
+      "6                59    Male             32        1.0        1.0       1.0   \n",
+      "7                50    Male             43        1.0        0.0       0.0   \n",
+      "8                54    Male             80        0.0        1.0       1.0   \n",
+      "9                68  Female             94        0.0        0.0       0.0   \n",
+      "\n",
+      "  Dukes_Stage  Patient_ID  \n",
+      "0           A           1  \n",
+      "1           B           2  \n",
+      "2           C           3  \n",
+      "3           D           4  \n",
+      "4           C           5  \n",
+      "5           A           6  \n",
+      "6           C           7  \n",
+      "7           B           8  \n",
+      "8           B           9  \n",
+      "9           C          10  \n",
+      "--------------------------------------------\n",
+      "Cleaned Supplementary Dataframe\n",
+      "--------------------------------------------\n",
+      "   Age_at_diagnosis  Gender    Ethnicity   Race               Surgery_type  \\\n",
+      "0                70  Female  Non-spanish  White  Partial colectomy, s/ LAR   \n",
+      "1                67    Male  Non-spanish  White  Partial colectomy, s/ LAR   \n",
+      "2                64  Female  Non-spanish  Black       Subtotal colectomy/h   \n",
+      "3                52    Male  Non-spanish  Black       Subtotal colectomy/h   \n",
+      "4                53  Female  Non-spanish  Black       combination of 40 Pl   \n",
+      "5                83    Male  Non-spanish  White       Subtotal colectomy/h   \n",
+      "6                84    Male  Non-spanish  White       Subtotal colectomy/h   \n",
+      "7                78    Male  Non-spanish  White       Subtotal colectomy/h   \n",
+      "8                53    Male  Non-spanish  White       Subtotal colectomy/h   \n",
+      "9                49    Male  Non-spanish  White       Subtotal colectomy/h   \n",
+      "\n",
+      "  Diagnosed_before_age_50             Histology Histologic_Grade  \\\n",
+      "0                       N  Adenocarcinoma, NOS;               G2   \n",
+      "1                       N  Adenocarcinoma, NOS;               G2   \n",
+      "2                       N  Adenocarcinoma, NOS;               G2   \n",
+      "3                       N  Adenocarcinoma, NOS;               G2   \n",
+      "4                       N  Adenocarcinoma, NOS;               G2   \n",
+      "5                       N  Adenocarcinoma, NOS;               G2   \n",
+      "6                       N  Adenocarcinoma, NOS;               G3   \n",
+      "7                       N  Adenocarcinoma, NOS;               G2   \n",
+      "8                       N  Adenocarcinoma, NOS;               G2   \n",
+      "9                       Y  Adenocarcinoma, NOS;               G2   \n",
+      "\n",
+      "   Tumor_Size_cm  Nodes_examined  Nodes_positive Perineural_invasion  \\\n",
+      "0            2.0              14               0                   N   \n",
+      "1            5.8              12               0                   N   \n",
+      "2           10.5               9               0                   N   \n",
+      "3            4.2              30               2                   N   \n",
+      "4            6.5              31               0                   N   \n",
+      "5            6.0              40               0                   N   \n",
+      "6            6.0              32               0                   Y   \n",
+      "7            0.7              24               0                   N   \n",
+      "8            2.5              19               0                   N   \n",
+      "9            5.5               2               2                   Y   \n",
+      "\n",
+      "  Lymphovascular_invasion TNM_Staging Dukes_Stage  Patient_ID  \n",
+      "0                       N         IIA           B           1  \n",
+      "1                       N         IVA           D           2  \n",
+      "2                       Y        IIIB           C           3  \n",
+      "3                       Y        IIIB           C           4  \n",
+      "4                       N         IVA           D           5  \n",
+      "5                       Y           I           A           6  \n",
+      "6                       Y         IIA           B           7  \n",
+      "7                       N           I           A           8  \n",
+      "8                       N           I           A           9  \n",
+      "9                       Y         IVC           D          10  \n",
+      "--------------------------------------------\n",
+      "Cleaned Cancer Prediction Dataframe\n",
+      "--------------------------------------------\n",
+      "   Age_at_diagnosis  Gender Smoking_status Alcohol_intake Physical_activity  \\\n",
+      "0                29    male         former          light              high   \n",
+      "1                72    male         former       moderate               low   \n",
+      "2                10    male        current           none          moderate   \n",
+      "3                35    male         former          heavy               low   \n",
+      "4                 6  female         former           none          moderate   \n",
+      "5                73    male          never          heavy              high   \n",
+      "6                68  female          never          light               low   \n",
+      "7                 9  female          never          heavy              high   \n",
+      "8                20  female        current       moderate              high   \n",
+      "9                65  female          never          heavy               low   \n",
+      "\n",
+      "  Family_history       Medical_history Cancer_type Cancer_stage Dukes_Stage  \\\n",
+      "0            yes  Respiratory Diseases       Mouth          III           C   \n",
+      "1             no  Respiratory Diseases       Brain           IV           D   \n",
+      "2            yes                Stroke     ovarian           II           B   \n",
+      "3             no                Stroke       Lymph           IV           D   \n",
+      "4             no               Thyroid        lung           IV           D   \n",
+      "5            yes        Kidney Disease        lung            I           A   \n",
+      "6            yes  Respiratory Diseases     ovarian            I           A   \n",
+      "7             no               Thyroid        lung           IV           D   \n",
+      "8             no          Tuberculosis        skin           IV           D   \n",
+      "9             no          hypertension       Lymph            I           A   \n",
+      "\n",
+      "   Patient_ID  \n",
+      "0           1  \n",
+      "1           2  \n",
+      "2           3  \n",
+      "3           4  \n",
+      "4           5  \n",
+      "5           6  \n",
+      "6           7  \n",
+      "7           8  \n",
+      "8           9  \n",
+      "9          10  \n",
+      "--------------------------------------------\n"
      ]
     }
    ],
@@ -39,14 +147,29 @@
     "# Define a SQL query to fetch the data from the database\n",
     "query = \"SELECT * FROM cleaned_patient;\"\n",
     "query1 = \"SELECT * FROM cleaned_supplementary;\"\n",
+    "query2 = \"SELECT * FROM cleaned_cancer_prediction;\"\n",
     "\n",
     "# Use Pandas to read the data into a DataFrame\n",
     "df = pd.read_sql(query, engine)\n",
     "df1 = pd.read_sql(query1, engine)\n",
+    "df2 = pd.read_sql(query2, engine)\n",
     "\n",
     "# Now you can use the DataFrame for further analysis or processing\n",
-    "print(df.head())  \n",
-    "print(df1.head())  "
+    "print(\"Cleaned Patient DataFrame\")\n",
+    "print(\"--------------------------------------------\")\n",
+    "print(df.head(10))\n",
+    "print(\"--------------------------------------------\")\n",
+    "\n",
+    "print(\"Cleaned Supplementary Dataframe\")\n",
+    "print(\"--------------------------------------------\")\n",
+    "print(df1.head(10))  \n",
+    "print(\"--------------------------------------------\")\n",
+    "\n",
+    "\n",
+    "print(\"Cleaned Cancer Prediction Dataframe\")\n",
+    "print(\"--------------------------------------------\")\n",
+    "print(df2.head(10))\n",
+    "print(\"--------------------------------------------\")"
    ]
   },
   {
