--- a/Data_prep.ipynb
+++ b/Data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -176,19 +176,19 @@
        "4           IV  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display sample data\n",
-    "Cancer_disesase_prediction_df.head()"
+    "Cancer_disease_prediction_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -312,7 +312,7 @@
        "4             40.0        0.0        0.0       1.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -724,7 +724,7 @@
        "4                             N         IVA  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
        "4                       N         IVA  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
        "       'IIIC', 'IIa', 'IIC'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1110,7 @@
        "4                       N         IVA           D  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1195,9 +1195,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>62.0</td>\n",
+       "      <td>62</td>\n",
        "      <td>Male</td>\n",
-       "      <td>108.0</td>\n",
+       "      <td>108</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1205,9 +1205,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>77.0</td>\n",
+       "      <td>77</td>\n",
        "      <td>Male</td>\n",
-       "      <td>40.0</td>\n",
+       "      <td>40</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1215,9 +1215,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>66.0</td>\n",
+       "      <td>66</td>\n",
        "      <td>Female</td>\n",
-       "      <td>49.0</td>\n",
+       "      <td>49</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1225,9 +1225,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>72.0</td>\n",
+       "      <td>72</td>\n",
        "      <td>Female</td>\n",
-       "      <td>45.0</td>\n",
+       "      <td>45</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
@@ -1235,9 +1235,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>75.0</td>\n",
+       "      <td>75</td>\n",
        "      <td>Male</td>\n",
-       "      <td>40.0</td>\n",
+       "      <td>40</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -1249,11 +1249,11 @@
       ],
       "text/plain": [
        "   Age (in years)  Gender  DFS (in months)  DFS event  Adj_Radio  Adj_Chem  \\\n",
-       "0            62.0    Male            108.0        0.0        1.0       0.0   \n",
-       "1            77.0    Male             40.0        1.0        1.0       0.0   \n",
-       "2            66.0  Female             49.0        0.0        1.0       0.0   \n",
-       "3            72.0  Female             45.0        0.0        1.0       1.0   \n",
-       "4            75.0    Male             40.0        0.0        0.0       1.0   \n",
+       "0              62    Male              108        0.0        1.0       0.0   \n",
+       "1              77    Male               40        1.0        1.0       0.0   \n",
+       "2              66  Female               49        0.0        1.0       0.0   \n",
+       "3              72  Female               45        0.0        1.0       1.0   \n",
+       "4              75    Male               40        0.0        0.0       1.0   \n",
        "\n",
        "  Dukes Stage  \n",
        "0           A  \n",
@@ -1263,7 +1263,7 @@
        "4           C  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1272,12 +1272,16 @@
     "# Filter patient_data_df \n",
     "cleaned_patient_df = patient_data_df[[\"Age (in years)\", \"Gender\", \"DFS (in months)\", \"DFS event\", \"Adj_Radio\", \"Adj_Chem\", \"Dukes Stage\"]]\n",
     "cleaned_patient_df =cleaned_patient_df.dropna()\n",
+    "\n",
+    "#convert Age into integers and Months into integers\n",
+    "cleaned_patient_df['Age (in years)'] = cleaned_patient_df['Age (in years)'].astype(int)\n",
+    "cleaned_patient_df['DFS (in months)'] = cleaned_patient_df['DFS (in months)'].astype(int)\n",
     "cleaned_patient_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1313,9 +1317,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>62.0</td>\n",
+       "      <td>62</td>\n",
        "      <td>Male</td>\n",
-       "      <td>108.0</td>\n",
+       "      <td>108</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1323,9 +1327,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>77.0</td>\n",
+       "      <td>77</td>\n",
        "      <td>Male</td>\n",
-       "      <td>40.0</td>\n",
+       "      <td>40</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1333,9 +1337,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>66.0</td>\n",
+       "      <td>66</td>\n",
        "      <td>Female</td>\n",
-       "      <td>49.0</td>\n",
+       "      <td>49</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1343,9 +1347,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>72.0</td>\n",
+       "      <td>72</td>\n",
        "      <td>Female</td>\n",
-       "      <td>45.0</td>\n",
+       "      <td>45</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
@@ -1353,9 +1357,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>75.0</td>\n",
+       "      <td>75</td>\n",
        "      <td>Male</td>\n",
-       "      <td>40.0</td>\n",
+       "      <td>40</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -1367,11 +1371,11 @@
       ],
       "text/plain": [
        "   Age_at_diagnosis  Gender  DFS_in_months  DFS_event  Adj_Radio  Adj_Chem  \\\n",
-       "0              62.0    Male          108.0        0.0        1.0       0.0   \n",
-       "1              77.0    Male           40.0        1.0        1.0       0.0   \n",
-       "2              66.0  Female           49.0        0.0        1.0       0.0   \n",
-       "3              72.0  Female           45.0        0.0        1.0       1.0   \n",
-       "4              75.0    Male           40.0        0.0        0.0       1.0   \n",
+       "0                62    Male            108        0.0        1.0       0.0   \n",
+       "1                77    Male             40        1.0        1.0       0.0   \n",
+       "2                66  Female             49        0.0        1.0       0.0   \n",
+       "3                72  Female             45        0.0        1.0       1.0   \n",
+       "4                75    Male             40        0.0        0.0       1.0   \n",
        "\n",
        "  Dukes_Stage  \n",
        "0           A  \n",
@@ -1381,7 +1385,7 @@
        "4           C  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1530,7 +1534,7 @@
        "4               Thyroid        lung           IV  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1546,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1662,7 +1666,7 @@
        "4             no               Thyroid        lung           IV  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1683,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1692,7 +1696,7 @@
        "array(['III', 'IV', 'II', 'I'], dtype=object)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1703,8 +1707,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1825,7 +1831,7 @@
        "4             no               Thyroid        lung           IV           D  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1847,7 +1853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
