updated data prep and retrieval file

--- a/Retrieving Data From Database.ipynb
+++ b/Retrieving Data From Database.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "b92fd2b3",
    "metadata": {},
    "outputs": [
@@ -150,25 +150,25 @@
     "query2 = \"SELECT * FROM cleaned_cancer_prediction;\"\n",
     "\n",
     "# Use Pandas to read the data into a DataFrame\n",
-    "df = pd.read_sql(query, engine)\n",
-    "df1 = pd.read_sql(query1, engine)\n",
-    "df2 = pd.read_sql(query2, engine)\n",
+    "df_patient = pd.read_sql(query, engine)\n",
+    "df_supplementary = pd.read_sql(query1, engine)\n",
+    "df_cancer_prediction = pd.read_sql(query2, engine)\n",
     "\n",
     "# Now you can use the DataFrame for further analysis or processing\n",
     "print(\"Cleaned Patient DataFrame\")\n",
     "print(\"--------------------------------------------\")\n",
-    "print(df.head(10))\n",
+    "print(df_patient.head(10))\n",
     "print(\"--------------------------------------------\")\n",
     "\n",
     "print(\"Cleaned Supplementary Dataframe\")\n",
     "print(\"--------------------------------------------\")\n",
-    "print(df1.head(10))  \n",
+    "print(df_supplementary.head(10))  \n",
     "print(\"--------------------------------------------\")\n",
     "\n",
     "\n",
     "print(\"Cleaned Cancer Prediction Dataframe\")\n",
     "print(\"--------------------------------------------\")\n",
-    "print(df2.head(10))\n",
+    "print(df_cancer_prediction.head(10))\n",
     "print(\"--------------------------------------------\")"
    ]
   },
